[gd_scene load_steps=5 format=3 uid="uid://bl2oop3evwqr"]

[ext_resource type="Script" uid="uid://jbsv0r85sjg8" path="res://scripts/main.gd" id="1_jyhfs"]
[ext_resource type="Script" uid="uid://pofk5tf3365n" path="res://scripts/SystemNode.cs" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://b0ejeoy3k5i2f" path="res://scenes/shark.tscn" id="2_sugp2"]
[ext_resource type="Script" uid="uid://brl0aehyue5u5" path="res://scripts/sprite_area.gd" id="2_tbgi4"]

[node name="Main" type="Node2D"]
script = ExtResource("1_jyhfs")

[node name="SpriteArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_tbgi4")

[node name="Shark" parent="SpriteArea" instance=ExtResource("2_sugp2")]

[node name="CountdownTimer" type="Timer" parent="SpriteArea"]

[node name="SystemNode" type="Node2D" parent="."]
script = ExtResource("2_0wfyh")

[connection signal="ground_level" from="." to="SpriteArea" method="_on_main_ground_level"]
[connection signal="timeout" from="SpriteArea/CountdownTimer" to="SpriteArea" method="_on_countdown_timer_timeout"]
